--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Find Artifact &middot; Consice UI for a wide maven artifact search</title>
-
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/findartifact.css">
-
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
-    <div class="container">
+    <div id="main" class="container">
       <div class="page-header">
         Search dependencies over <strong><abbr title="currently, only maven central is in the scope and more repositories are coming soon!">all known</abbr></strong> maven repositories
       </div>
@@ -30,12 +19,5 @@
         <small>For example: <a href='search?q=slf4j'>slf4j</a>, <a href='search?q=javax.servlet'>javax.servlet</a>, <a href='search?q=jetty'>jetty</a></small>
       </form>
     </div>
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted"><a href='about'>About</a> &middot; Copyright 2015 Timur Rubeko</p>
-      </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
