Factorized search form HTML snippet

--- a/resources/templates/about.html
+++ b/resources/templates/about.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/findartifact.css">
   </head>
   <body>
     <div id="main" class="container">
-      <div class="page-header">
+      <div class="page-header row">
         <p>Find Artifact is a simple Maven Repository search tool. It's goal is best explained in how it differs from existing ones:</p>
         <ul>
           <li>it has extremely simple and bloat-free user interface</li>
