--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -2,22 +2,16 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/findartifact.css">
   </head>
   <body>
     <div id="main" class="container">
-      <div class="page-header">
+      <div class="page-header row">
         Search dependencies over <strong><abbr title="currently, only maven central is in the scope and more repositories are coming soon!">all known</abbr></strong> maven repositories
       </div>
-      <form class="form-inline" method="GET" action="search">
-        <div class="form-group">
-          <label for="query" class="sr-only">Query</label>
-          <input type="text" class="form-control" id="query" name="q" placeholder="Type artifact id, group id or class name..." autofocus>
-        </div>
-        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i>&nbsp;Search</button>
-        <br/>
+      <div id="search" class="row"></div>
+      <div class="row">
         <small>For example: <a href='search?q=slf4j'>slf4j</a>, <a href='search?q=javax.servlet'>javax.servlet</a>, <a href='search?q=jetty'>jetty</a></small>
-      </form>
+      </div>
     </div>
   </body>
 </html>
