Added artifact details page

--- a/resources/templates/results.html
+++ b/resources/templates/results.html
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-md-9 list">
           <div class="artifact row top-buffer">
-            <span><a class="name" href="artifact?c=this.is:my-artifact">this.is:my-artifact</a></span><br>
+            <span><a class="name" href="artifact?id=this.is:my-artifact">this.is:my-artifact</a></span><br>
             <span>Version <span class="latest-version">3.8.42</span> and <span class="version-count">42</span> older versions found</span><br>
             <span><small>Found in <span class="location">JBoss Nexus</span></small></span>
           </div>
