Details page: display and download all artifacts

--- a/resources/templates/artifact.html
+++ b/resources/templates/artifact.html
@@ -20,7 +20,9 @@
         <div class="col-md-12 tab-content">
           <div role="tabpanel" class="tab-pane top-buffer">
             <pre class="dependency-id">org.slf4j:slf4j-parent:1.7.12</pre>
-            <div class="add-info">Also includes classifiers: <span class="classifiers">javadoc, sources</span></div>
+            <div>All artifacts (includes classifiers): <span class="classifiers">
+              <a class="download left-buffer-sm" href="#download">javadoc</a>
+            </span></div>
             <div class="btn btn-small btn-default btn-copy top-buffer" title="Copy to clipboard" data-clipboard-target="dependency-id">
               <span class="glyphicon glyphicon-copy" aria-hidden="true"></span> Copy!
             </div>
