--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -24,6 +24,7 @@
         <p class="text-muted"><a href='about'>About</a> &middot; Copyright 2015 Timur Rubeko</p>
       </div>
     </footer>
+    <script src="js/findartifact.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
