Added group suggestions

--- a/resources/templates/results.html
+++ b/resources/templates/results.html
@@ -16,18 +16,11 @@
             <span>Version <span class="latest-version">3.8.42</span> and <span class="version-count">42</span> older versions found</span><br>
             <span><small>Found in <span class="location">JBoss Nexus</span></small></span>
           </div>
-          <!--<div class="pages row top-buffer">
-            <span class="current">1</span>
-            <a href="search?q=org.slf4j&p=2" class="page left-buffer-sm">2</a>
-            <a href="search?q=org.slf4j&p=3" class="page left-buffer-sm">3</a>
-            <a href="search?q=org.slf4j&p=2" class="next left-buffer-lg">Next</a>
-          </div>-->
         </div>
-        <!--<div class="col-md-3 top-buffer suggestions">
+        <div class="col-md-3 top-buffer group-suggestions">
           <small>Did you mean to search one of these groups?</small>
-          <span class="suggestion"><a href="search?q=g:org.slf4j" class="group">org.slf4j</a></span><br>
-          <span class="suggestion"><a href="search?q=g:org.slf4j13" class="group">org.slf4j13</a></span><br>
-        </div>-->
+          <span class="group-suggestion"><a href="search?q=g:org.slf4j" class="group-name">org.slf4j</a><br></span>
+        </div>
       </div>
     </div>
   </body>
