Added spelling suggestions

--- a/resources/templates/results.html
+++ b/resources/templates/results.html
@@ -6,8 +6,12 @@
   <body>
     <div id="main" class="container top-buffer">
       <div id="search" class="row"></div>
-      <div class="row">
+      <div class="row results-count">
         <small>Found <span id="results-count">42</span> results</small>
+      </div>
+      <div class="row spell-suggestions">
+        Did you mean one of these?<br>
+        <span class="spell-suggestion right-buffer-lg"><a class="suggestion" href="search?q=logging">logging</a> </span>
       </div>
       <div class="row">
         <div class="col-md-9 list">
