Added help on front page

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -10,7 +10,18 @@
       </div>
       <div id="search" class="row"></div>
       <div class="row">
-        <small>For example: <a href='search?q=slf4j'>slf4j</a>, <a href='search?q=javax.servlet'>javax.servlet</a>, <a href='search?q=jetty'>jetty</a></small>
+        <small>For example: <a href='search?q=slf4j'>slf4j</a>, <a href='search?q=javax.servlet'>javax.servlet</a>, <a href='search?q=jetty'>jetty</a></small>.
+        <small>Or, <a href="#" onclick="$('div.help').toggleClass('hidden');">Show help</a> and more query examples.</small>
+      </div>
+      <div class="help row top-buffer hidden">
+        <div class="col-md-9 panel panel-default">
+          <p>Search query can be in one of the following forms:</p>
+          <ul>
+            <li>simple query, like `slf4j` or `akka`</li>
+            <li>group-wise search, like `g:org.slf4j` or `g:org.slf4j api`</li>
+            <li>concrete artifact search, like `org.slf4j:slf4j-parent`</li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
