Added error handling

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -15,12 +15,14 @@
       </div>
       <div class="help row top-buffer hidden">
         <div class="col-md-9 panel panel-default">
-          <p>Search query can be in one of the following forms:</p>
-          <ul>
-            <li>simple query, like `slf4j` or `akka`</li>
-            <li>group-wise search, like `g:org.slf4j` or `g:org.slf4j api`</li>
-            <li>concrete artifact search, like `org.slf4j:slf4j-parent`</li>
-          </ul>
+          <div class="panel-body">
+            <p>Search query can be in one of the following forms:</p>
+            <ul>
+              <li>simple query, like `slf4j` or `akka`</li>
+              <li>group-wise search, like `g:org.slf4j` or `g:org.slf4j api`</li>
+              <li>concrete artifact search, like `org.slf4j:slf4j-parent`</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
