--- a/resources/templates/results.html
+++ b/resources/templates/results.html
@@ -7,7 +7,7 @@
     <div id="main" class="container top-buffer">
       <div id="search" class="row"></div>
       <div class="row results-count">
-        <small>Found <span id="results-count">42</span> results</small>
+        <small>Found <span id="results-count">?</span> results</small>
       </div>
       <div class="row spell-suggestions">
         Did you mean one of these?<br>
